Fix breadcrumb links
Fixed by removing code related to "Anchor link fix". That code made
elements overlap thus preventing clicking breadcrumb link.

--- a/_scss/_jekyll-content.scss
+++ b/_scss/_jekyll-content.scss
@@ -110,31 +110,4 @@
   &__github-edit {
     margin-top: $margin-md;
   }
-
-  /* Anchor link fix */
-  h1 {
-    margin-top: -50px;
-    padding-top: calc(50px + 1.5rem);
-  }
-
-  h2 {
-    margin-top: -50px;
-    padding-top: calc(50px + 1rem);
-  }
-  
-  h3 {
-    margin-top: -50px;
-    padding-top: calc(50px + 1rem);
-  }
-
-  h4 {
-    margin-top: -50px;
-    padding-top: calc(50px + 1rem);
-  }
-}
-
-/* Anchor link fix */
-.swagger-section-heading {
-  margin-top: -50px;
-  padding-top: calc(50px + 1rem);
 }
